--- a/www/src/index.css
+++ b/www/src/index.css
@@ -2,9 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* 
 body {
 	background-color: #212121;
-	height: 100vh;
-} 
-*/
+	/* height: 100vh; */
+}
